--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    <div id="main"></div>
-    <script type="text/javascript" src="/public/bundle.js"></script>
-  </body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
+		<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.css"> -->
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<title>Park Ranger &ndash; Alpha</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	</head>
+	<body>
+		<div id="parkEntrance"></div>
+		<script type="text/javascript" src="/public/bundle.js"></script>
+	</body>
 </html>
